# python-helloworld

./: .flake8  .gitignore  .gitlab-ci.yml  .travis.yml  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: poetry.yml
extra/: flatpak-python.sh
helloworld/: __init__.py  cli.py  model.py
src/helloworld/: __init__.py  __main__.py  core.py
src/tests/: test_user.py
tests/: test_cli.py  test_user.py
tools/: python-install.sh
