[tool.poetry]
name = "helloworld"
version = "0.1.2"
description = "Just a sample project"
homepage = "https://github.com/essembeh/python-helloworld"
authors = ["Sébastien MB <seb@essembeh.org>"]
license = "Apache-2.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Utilities"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
importlib_metadata = { version = "", python = "< 3.8" }
dataclasses = { version = "", python = "< 3.7" }
cached-property = ""
colorama = ""


[tool.poetry.dev-dependencies]
black = ""
pylint = ""
pytest = ""
pytest-dotenv = ""
pytest-cov = ""
rope = ""

[tool.poetry.scripts]
helloworld = 'helloworld.cli:run'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
