[tool.poetry]
name = "helloworld"
version = "0.1.0"
description = "Just a sample project"
homepage = "https://github.com/essembeh/python-helloworld"
authors = ["Sébastien MB <seb@essembeh.org>"]
license = "Apache-2.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Utilities"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
colorama = "^0.4.6"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
isort = "^5.12.0"
pylint = "^3.0.1"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
pytest-dotenv = "^0.5.2"

[tool.poetry.scripts]
helloworld = 'helloworld.cli:run'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
